create new route book to get book info and update return of the other routes
