# source/controllers/book.controller.js
@@ -1,19 +1,19 @@
 const { request, response } = require("express");
 const books = require("../database/books.json");
 
-const get_author = async (req = request, res = response) => {
+const get_book = async (req = request, res = response) => {
     try {
-        const author = books.find((el) => el.name.toLowerCase() === req.query.book.toLocaleLowerCase())?.author;
-        if (author) res.status(200).send({ author });
+        const book = books.find((el) => el.name.toLowerCase() === req.query.book.toLocaleLowerCase());
+        if (book) res.status(200).send(book); 
         else {
             const error = "Book not found";
             res.status(404).send({ error })
-        }
+        } 
     } catch (error) {
         throw(error); 
     }
 }
 
 module.exports = {
-    get_author
+    get_book
 }
